dim-label: focused dim labels should not be white
Only when there's a selection, otherwise the text becomes unreadable.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2388,11 +2388,11 @@ GtkInfoBar:last-child,
 }
 
 .dim-label,
-.dim-label:hover {
+.dim-label:hover,
+.dim-label:focus {
     color: mix (@theme_fg_color, @theme_bg_color, 0.50);
 }
 
-.dim-label:focus,
 .dim-label:selected,
 .dim-label:selected:focus {
     color: mix (@theme_selected_fg_color, @theme_base_color, 0.50);
