documents: add an asset for the DnD icon counter

--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -333,6 +333,14 @@ GtkIconView.documents-main-view.check:active {
     border-radius: 8px;
 }
 
+.documents-counter {
+    background-image: url('assets/dnd-counter.svg');
+    background-size: contain;
+    background-color: transparent;
+    color: @theme_base_color;
+    font: bold;
+}
+
 .documents-osd {
     background-image: none;
     background-color: transparent;
