--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2054,6 +2054,13 @@ GtkTreeView.view {
     background-color: @theme_base_color;
 }
 
+.view:insensitive,
+GtkTreeView:insensitive,
+GtkTreeView.view:insensitive {
+    background-color: @insensitive_bg_color;
+    color: @insensitive_fg_color;
+}
+
 .view:backdrop,
 GtkTreeView:backdrop,
 GtkTreeView.view:backdrop {
