expander: set a 2px border radius for expanders in rows
Otherwise it will get the view default, which is zero.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2192,6 +2192,10 @@ row:selected {
     background-color: shade (@theme_bg_color, 1.02);
 }
 
+.expander row {
+    border-radius: 2px;
+}
+
 .expander row:selected,
 .expander row:selected:focus {
     border-style: solid;
