--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -108,6 +108,10 @@ NautilusLocationEntry.entry {
 }
 
 
+NautilusQueryEditor .button,
+NautilusQueryEditor .button:focus,
+NautilusQueryEditor .button:active,
+NautilusQueryEditor .button:active:focus,
 NautilusSearchBar .entry,
 NautilusSearchBar .entry:focus {
     border-image: none;
@@ -116,8 +120,6 @@ NautilusSearchBar .entry:focus {
     border-width: 1px;
     padding-left: 4px;
     padding-right: 4px;
-
-    -GtkEntry-inner-border: 3;
 }
 
 NautilusWindow .sidebar .frame {
