widgets: fix dim-label style class for treeview rows
As used by gnome-documents.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2416,6 +2416,7 @@ GtkInfoBar:last-child,
     border-color: darker(@error_bg_color);
 }
 
+.view.dim-label,
 .dim-label,
 .dim-label:hover,
 .dim-label:focus {
