--- a/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-assets.css
@@ -21,10 +21,14 @@
     background-image: url("assets/checkbox-unchecked-alt.png");
 }
 
-.check:insensitive,
+.check:insensitive {
+    background-image: url("assets/checkbox-unchecked-insensitive.png");
+}
+
 .check row:selected:insensitive,
 .check row:selected:focus:insensitive {
-    background-image: url("assets/checkbox-unchecked-insensitive.png");
+    background-color: transparent;
+    background-image: url("assets/checkbox-unchecked-insensitive-alt.png");
 }
 
 .check:backdrop,
@@ -47,15 +51,18 @@
     background-image: url("assets/checkbox-checked-alt.png");
 }
 
+.check:active:insensitive {
+    background-image: url("assets/checkbox-checked-insensitive.png");
+}
+
+.check row:selected:active:insensitive,
+.check row:selected:focus:active:insensitive {
+    background-image: url("assets/checkbox-checked-insensitive-alt.png");
+}
+
 .check:active:backdrop,
 .check row:selected:active:backdrop {
     background-image: url("assets/checkbox-checked-backdrop.png");
-}
-
-.check:active:insensitive,
-.check row:selected:active:insensitive,
-.check row:selected:focus:active:insensitive {
-    background-image: url("assets/checkbox-checked-insensitive.png");
 }
 
 .check:active:insensitive:backdrop,
@@ -73,15 +80,18 @@
     background-image: url("assets/checkbox-mixed-alt.png");
 }
 
+.check:inconsistent:insensitive {
+    background-image: url("assets/checkbox-mixed-insensitive.png");
+}
+
+.check row:selected:inconsistent:insensitive,
+.check row:selected:focus:inconsistent:insensitive {
+    background-image: url("assets/checkbox-mixed-insensitive-alt.png");
+}
+
 .check:inconsistent:backdrop,
 .check row:selected:inconsistent:backdrop {
     background-image: url("assets/checkbox-mixed-backdrop.png");
-}
-
-.check:inconsistent:insensitive,
-.check row:selected:inconsistent:insensitive,
-.check row:selected:focus:inconsistent:insensitive {
-    background-image: url("assets/checkbox-mixed-insensitive.png");
 }
 
 .check:inconsistent:insensitive:backdrop,
@@ -98,15 +108,18 @@
     background-image: url("assets/radio-unchecked-alt.png");
 }
 
+.radio:insensitive {
+    background-image: url("assets/radio-unchecked-insensitive.png");
+}
+
+.radio row:selected:insensitive,
+.radio row:selected:focus:insensitive {
+    background-image: url("assets/radio-unchecked-insensitive-alt.png");
+}
+
 .radio:backdrop,
 .radio row:selected:backdrop {
     background-image: url("assets/radio-unchecked-backdrop.png");
-}
-
-.radio:insensitive,
-.radio row:selected:insensitive,
-.radio row:selected:focus:insensitive {
-    background-image: url("assets/radio-unchecked-insensitive.png");
 }
 
 .radio:insensitive:backdrop,
@@ -124,16 +137,18 @@
     background-image: url("assets/radio-checked-alt.png");
 }
 
+.radio:active:insensitive {
+    background-image: url("assets/radio-checked-insensitive.png");
+}
+
+.radio row:selected:active:insensitive,
+.radio row:selected:focus:active:insensitive {
+    background-image: url("assets/radio-checked-insensitive-alt.png");
+}
+
 .radio:active:backdrop,
 .radio row:selected:active:backdrop {
     background-image: url("assets/radio-checked-backdrop.png");
-}
-
-
-.radio:active:insensitive,
-.radio row:selected:active:insensitive,
-.radio row:selected:focus:active:insensitive {
-    background-image: url("assets/radio-checked-insensitive.png");
 }
 
 .radio:active:insensitive:backdrop,
@@ -151,16 +166,18 @@
     background-image: url("assets/radio-mixed-alt.png");
 }
 
+.radio:inconsistent:insensitive {
+    background-image: url("assets/radio-mixed-insensitive.png");
+}
+
+.radio row:selected:inconsistent:insensitive,
+.radio row:selected:focus:inconsistent:insensitive {
+    background-image: url("assets/radio-mixed-insensitive-alt.png");
+}
+
 .radio:inconsistent:backdrop,
 .radio row:selected:inconsistent:backdrop {
     background-image: url("assets/radio-mixed-backdrop.png");
-}
-
-
-.radio:inconsistent:insensitive,
-.radio row:selected:inconsistent:insensitive,
-.radio row:selected:focus:inconsistent:insensitive {
-    background-image: url("assets/radio-mixed-insensitive.png");
 }
 
 .radio:inconsistent:insensitive:backdrop,
