treeview: fix GtkTreeView separators colors on hover/backdrop
https://bugzilla.gnome.org/show_bug.cgi?id=671848

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -202,13 +202,15 @@ GtkStatusbar {
     border-radius: 0;
 }
 
-GtkTreeView .separator,
+GtkTreeView.view.separator,
+GtkTreeView.separator,
 .separator,
 .separator:hover {
     color: @borders;
 }
 
-GtkTreeView .separator:backdrop,
+GtkTreeView.view.separator:backdrop,
+GtkTreeView.separator:backdrop,
 .separator:backdrop,
 .separator:hover:backdrop {
     color: @unfocused_insensitive_borders;
