image: set a color for images over a selection
We should use the same color of the text here.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -311,6 +311,9 @@ GtkImage:insensitive {
     color: @internal_element_prelight;
 }
 
+.image:selected {
+    color: @theme_selected_fg_color;
+}
 
 /*****************
  * GtkSpinButton *
