screensaver: add an 1px border for the unlock screensaver dialog
Since we don't render borders for GtkFrames, we need to special case
this special frame here.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2520,3 +2520,11 @@ GsmFailWhaleDialog * {
     background-color: @os_chrome_bg_color;
     background-image: none;
 }
+
+/* gnome-screensaver lock dialog */
+GSLockPlug .frame {
+    border-color: @borders;
+    border-width: 1;
+    border-style: solid;
+    border-radius: 0;
+}
