trivial: add a missing 'px'
Otherwise GTK will warn out that a unit is missing.

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2524,7 +2524,7 @@ GsmFailWhaleDialog * {
 /* gnome-screensaver lock dialog */
 GSLockPlug .frame {
     border-color: @borders;
-    border-width: 1;
+    border-width: 1px;
     border-style: solid;
     border-radius: 0;
 }
