frame: set an 1px border and not a padding
In the past, we avoided showing borders for GtkFrame widgets. Turns out
this is incompatible with legacy applications and some of the uses we
have for GtkFrame in GNOME apps, so let's turn the border on again.

https://bugzilla.gnome.org/show_bug.cgi?id=660797

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -681,8 +681,9 @@ GtkScale.trough:insensitive:backdrop {
  * Frames *
  **********/
 .frame {
-    padding: 2px;
-    border-width: 0;
+    border-width: 1px;
+    border-color: @borders;
+    border-style: solid;
     background-color: @theme_base_color;
 }
 
