link-button: don't set a text-shadow for the active state
Make sure GtkLinkButton never gets a text-shadow, even in its active
state.

Reported in https://bugzilla.gnome.org/show_bug.cgi?id=673321

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -1082,7 +1082,8 @@ GtkComboBox.combobox-entry .button {
     border-radius: 3px;
 }
 
-GtkLinkButton * {
+GtkLinkButton.button,
+GtkLinkButton.button *:active {
     text-shadow: none;
 }
 
