fallback-panel: properly override selection color for panel menuitems
Since CSS for .menuitem sets background color and color for

.menu .menuitem:hover,
.menu .menuitem *:hover { }

the panel menuitems need to override it with

.gnome-panel-menu-bar .menuitem:hover,
.gnome-panel-menu-bar .menuitem:hover { }

or children that render a background inside the menuitem (such as the
GtkImages used for the menu icons) will get the default background
selection color.

https://bugzilla.gnome.org/show_bug.cgi?id=673654

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2463,7 +2463,9 @@ PanelApplet > GtkMenuBar.menubar {
 }
 
 .gnome-panel-menu-bar .menuitem:hover,
-PanelApplet > GtkMenuBar.menubar .menuitem:hover {
+PanelApplet > GtkMenuBar.menubar .menuitem:hover,
+.gnome-panel-menu-bar .menuitem *:hover,
+PanelApplet > GtkMenuBar.menubar .menuitem *:hover {
     background-color: @os_chrome_selected_bg_color;
     color: @os_chrome_selected_fg_color;
 }
