treeview: cleanup treeview state selectors
Don't specify both GtkTreeView and GtkTreeView.view, since we already
specify .view. This also fixes cell renderers that specify different
backgrounds for a specific state, like GtkCellRendererProgress, as
reported in

https://bugzilla.gnome.org/show_bug.cgi?id=673840

--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -2080,37 +2080,33 @@ GtkIconView.view.cell:selected:focus {
 }
 
 .view,
-GtkTreeView,
-GtkTreeView.view {
+GtkTreeView {
     background-color: @theme_base_color;
     color: @theme_text_color;
 }
 
 .view:selected,
-GtkTreeView.view:selected {
+GtkTreeView:selected {
     background-color: @theme_selected_bg_color;
     color: @theme_selected_fg_color;
 }
 
 .view:insensitive,
-GtkTreeView:insensitive,
-GtkTreeView.view:insensitive {
+GtkTreeView:insensitive {
     background-color: @insensitive_bg_color;
     color: @insensitive_fg_color;
 }
 
 .view:backdrop,
-GtkTreeView:backdrop,
-GtkTreeView.view:backdrop {
+GtkTreeView:backdrop {
     background-color: @theme_unfocused_base_color;
     color: @theme_unfocused_text_color;
 }
 
-GtkIconView.view.cell:backdrop:selected,
 .cell:backdrop:selected,
+GtkIconView.view.cell:backdrop:selected,
 .view:backdrop:selected,
-GtkTreeView:backdrop:selected,
-GtkTreeView.view:backdrop:selected {
+GtkTreeView:backdrop:selected {
     background-color: @theme_unfocused_selected_bg_color;
     color: @theme_unfocused_selected_fg_color;
 }
