--- a/themes/Adwaita/gtk-3.0/gnome-applications.css
+++ b/themes/Adwaita/gtk-3.0/gnome-applications.css
@@ -57,7 +57,7 @@ TerminalWindow GtkNotebook.notebook {
 
 .nautilus-desktop.nautilus-canvas-item {
     color: @theme_bg_color;
-    text-shadow: 1 1 black;
+    text-shadow: 1px 1px black;
 }
 
 .nautilus-desktop.nautilus-canvas-item:active {
@@ -87,7 +87,7 @@ NautilusQueryEditor.info {
 .nautilus-cluebar-label {
     font: bold;
     color: @theme_base_color;
-    text-shadow: 0 1 alpha(black, 0.15);
+    text-shadow: 0 1px alpha(black, 0.15);
 }
 
 .nautilus-cluebar-label:backdrop {
@@ -247,7 +247,7 @@ GeditFloatingSlider .not-found {
 }
 
 .documents-load-more.button {
-    border-image-width: 0 2 2 2;
+    border-image-width: 0 2px 2px 2px;
     border-width: 0 1px 1px 1px;
 }
 
@@ -304,8 +304,8 @@ GtkIconView.documents-main-view.check:active {
 }
 
 .documents-selection-mode.toolbar .button * {
-    text-shadow: shade(@documents_selection_toolbar_border, 0.90) 0 1;
-    icon-shadow: shade(@documents_selection_toolbar_border, 0.90) 0 1;
+    text-shadow: 0 1px shade(@documents_selection_toolbar_border, 0.90);
+    icon-shadow: 0 1px shade(@documents_selection_toolbar_border, 0.90);
 }
 
 .documents-selection-mode.toolbar .button:hover {
@@ -388,7 +388,7 @@ GtkIconView.documents-main-view.check:active {
 
     text-shadow: none;
     icon-shadow: none;
-    box-shadow: -1 0 inset @documents_osd_button_inset;
+    box-shadow: inset -1px 0 @documents_osd_button_inset;
 }
 
 .documents-osd .toolbar .button,
@@ -400,7 +400,7 @@ GtkIconView.documents-main-view.check:active {
 .documents-osd .toolbar .button:nth-child(first) {
     border-radius: 4px 0 0 4px;
     border-left-width: 1px;
-    box-shadow: -1 0 inset @documents_osd_button_inset;
+    box-shadow: inset -1px 0 @documents_osd_button_inset;
 }
 
 .documents-osd .toolbar .button:nth-child(last) {
@@ -484,7 +484,7 @@ GtkIconView.documents-main-view.check:active {
                                      from(#aeaea4),
                                      color-stop(0.18, #d1d1cb),
                                      to(#d8d8d3));
-    text-shadow: @primary_toolbar_button_text_shadow 0 1;
+    text-shadow: 0 1px @primary_toolbar_button_text_shadow;
 }
 
 /* epiphany */
@@ -501,7 +501,7 @@ EphyToolbar.toolbar:backdrop {
 EphyToolbar .entry,
 EphyToolbar .entry:focus,
 EphyToolbar .entry:backdrop {
-    border-image-width: 3 0 4 3;
+    border-image-width: 3px 0 4px 3px;
     border-width: 1px 0 2px 1px;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
@@ -510,9 +510,9 @@ EphyToolbar .entry:backdrop {
 }
 
 EphyToolbar .entry:focus {
-    box-shadow: 1 2 inset alpha(@theme_selected_bg_color, 0.1),
-                1 1 inset alpha(@theme_selected_bg_color, 0.1),
-                0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset 1px 2px alpha(@theme_selected_bg_color, 0.1),
+                inset 1px 1px alpha(@theme_selected_bg_color, 0.1),
+                inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 EphyToolbar .location-entry .button {
@@ -521,7 +521,7 @@ EphyToolbar .location-entry .button {
 }
 
 EphyToolbar .location-entry .button:last-child {
-    border-image: url("borders/generic-border.svg") 3 3 4 3 / 3 3 4 0 stretch;
+    border-image: url("borders/generic-border.svg") 3 3 4 3 / 3px 3px 4px 0 stretch;
     border-width: 1px 1px 2px 0;
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
@@ -537,9 +537,9 @@ EphyToolbar .location-entry .button:focus {
                                     left top, left bottom,
                                     from(@entry_background_a),
                                     to(@entry_background_b));
-    box-shadow: 1 0 inset @inset_dark_color,
-                0 1 inset @entry_inset,
-                0 2 inset alpha(@entry_inset, 0.4);
+    box-shadow: inset 1px 0 @inset_dark_color,
+                inset 0 1px @entry_inset,
+                inset 0 2px alpha(@entry_inset, 0.4);
 }
 
 EphyToolbar .location-entry .button:active,
@@ -548,9 +548,9 @@ EphyToolbar .location-entry .button:active:hover {
                                     left top, left bottom,
                                     from(shade(@entry_background_a, 0.9)),
                                     to(@entry_background_b));
-    box-shadow: 1 0 inset @inset_dark_color,
-                0 1 inset @entry_inset, 
-                0 2 inset alpha(@entry_inset, 0.4);
+    box-shadow: inset 1px 0 @inset_dark_color,
+                inset 0 1px @entry_inset, 
+                inset 0 2px alpha(@entry_inset, 0.4);
 }
 
 EphyToolbar .location-entry .button:hover,
@@ -565,7 +565,7 @@ EphyToolbar .location-entry .button:hover:backdrop {
     background-image: none;
     background-color: @theme_unfocused_base_color;
     box-shadow: none;
-    border-image: url("borders/generic-border-unfocused.svg") 3 3 4 3 / 3 3 4 0 stretch;
+    border-image: url("borders/generic-border-unfocused.svg") 3 3 4 3 / 3px 3px 4px 0 stretch;
     border-radius: 3px;
     border-width: 1px 1px 2px 0;
 }
