--- a/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-backgrounds.css
@@ -137,7 +137,7 @@ GtkComboBox.combobox-entry .button:hover,
                                     left top, left bottom,
                                     from(@entry_background_a),
                                     to(@entry_background_b));
-    box-shadow: 0 1 inset @entry_inset, 0 2 inset alpha(@entry_inset, 0.4);
+    box-shadow: inset 0 1px @entry_inset, inset 0 2px alpha(@entry_inset, 0.4);
 }
 
 /* Entry pushed button background */
@@ -159,7 +159,7 @@ column-header .button:active:focus {
                                     left top, left bottom,
                                     from(shade(@entry_background_a, 0.9)),
                                     to(@entry_background_b));
-    box-shadow: 0 1 inset @entry_inset, 0 2 inset alpha(@entry_inset, 0.4);
+    box-shadow: inset 0 1px @entry_inset, inset 0 2px alpha(@entry_inset, 0.4);
 }
 
 /* Insensitive entry background */
