--- a/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets-borders-dark.css
@@ -9,7 +9,7 @@ GtkComboBox.combobox-entry .button,
 .trough,
 .trough.highlight,
 GtkSwitch.trough {
-    border-image: url("borders/generic-border-dark.svg") 3 3 4 3 / 3 3 4 3 stretch;
+    border-image: url("borders/generic-border-dark.svg") 3 3 4 3 / 3px 3px 4px 3px stretch;
     border-radius: 3px;
     border-width: 1px 1px 2px 1px;
     border-style: solid;
@@ -17,7 +17,7 @@ GtkSwitch.trough {
 }
 
 .trough row {
-    border-image: url("borders/generic-border-dark-alt.svg") 3 / 3 stretch;
+    border-image: url("borders/generic-border-dark-alt.svg") 3 / 3px stretch;
     border-radius: 3px;
     border-width: 1px;
     border-style: solid;
@@ -30,7 +30,7 @@ GtkComboBox.combobox-entry .entry:focus,
 .button:focus:active,
 .button.default:active,
 GtkSwitch.trough:active { 
-    border-image: url("borders/generic-border-focused-dark.svg") 3 3 4 3 / 3 3 4 3 stretch;
+    border-image: url("borders/generic-border-focused-dark.svg") 3 3 4 3 / 3px 3px 4px 3px stretch;
     border-radius: 3px;
     border-width: 1px 1px 2px 1px;
     border-style: solid;
@@ -39,7 +39,7 @@ GtkSwitch.trough:active {
 
 /* generic button borders */
 .button {
-    border-image: url("borders/button-border-dark.svg") 3 3 4 3 / 3 3 4 3 stretch;
+    border-image: url("borders/button-border-dark.svg") 3 3 4 3 / 3px 3px 4px 3px stretch;
     border-radius: 3px;
     border-width: 1px 1px 2px 1px;
     border-style: solid;
@@ -49,7 +49,7 @@ GtkSwitch.trough:active {
 /* focused button borders */
 .button:focus,
 .button.default { 
-    border-image: url("borders/button-border-focused-dark.svg") 3 3 4 3 / 3 3 4 3 stretch;
+    border-image: url("borders/button-border-focused-dark.svg") 3 3 4 3 / 3px 3px 4px 3px stretch;
     border-radius: 3px;
     border-width: 1px 1px 2px 1px;
     border-style: solid;
@@ -59,7 +59,7 @@ GtkSwitch.trough:active {
 /* tooltip elements borders */
 .tooltip .entry,
 .tooltip .button {
-    border-image: url("borders/tooltip-generic-border-dark.svg") 3 / 3 stretch;
+    border-image: url("borders/tooltip-generic-border-dark.svg") 3 / 3px stretch;
     border-width: 1px;
     border-style: solid;
     border-color: transparent;
@@ -68,7 +68,7 @@ GtkSwitch.trough:active {
 /* tooltip focused elements borders */
 .tooltip .entry:focus,
 .tooltip .button:focus {
-    border-image: url("borders/tooltip-generic-border-focused-dark.svg") 3 / 3 stretch;
+    border-image: url("borders/tooltip-generic-border-focused-dark.svg") 3 / 3px stretch;
     border-width: 1px;
     border-style: solid;
     border-color: transparent;
@@ -91,7 +91,7 @@ GtkSwitch.trough:active {
 .primary-toolbar GtkSwitch.trough:insensitive,
 .primary-toolbar GtkComboBox .button:active,
 .primary-toolbar GtkComboBox .button:insensitive {
-    border-image: url("borders/primary-toolbar-generic-border-dark.svg") 4 / 4 stretch;
+    border-image: url("borders/primary-toolbar-generic-border-dark.svg") 4 / 4px stretch;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
@@ -110,7 +110,7 @@ GtkSwitch.trough:active {
 .inline-toolbar.toolbar .button:focus:active,
 .inline-toolbar.toolbar .button.default:active,
 .primary-toolbar GtkComboBox .button:active:focus { 
-    border-image: url("borders/primary-toolbar-generic-border-focused-dark.svg") 4 / 4 stretch;
+    border-image: url("borders/primary-toolbar-generic-border-focused-dark.svg") 4 / 4px stretch;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
@@ -122,7 +122,7 @@ GtkSwitch.trough:active {
 .primary-toolbar .raised .button,
 .inline-toolbar.toolbar .button,
 .primary-toolbar GtkComboBox .button {
-    border-image: url("borders/primary-toolbar-button-border-dark.svg") 4 / 4 stretch;
+    border-image: url("borders/primary-toolbar-button-border-dark.svg") 4 / 4px stretch;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
@@ -137,7 +137,7 @@ GtkSwitch.trough:active {
 .inline-toolbar.toolbar .button:focus,
 .inline-toolbar.toolbar .button.default,
 .primary-toolbar GtkComboBox .button:focus { 
-    border-image: url("borders/primary-toolbar-button-border-focused-dark.svg") 4 / 4 stretch;
+    border-image: url("borders/primary-toolbar-button-border-focused-dark.svg") 4 / 4px stretch;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
@@ -215,7 +215,7 @@ GtkComboBox *:backdrop,
 .entry:backdrop,
 GtkSwitch.trough:backdrop,
 .trough:backdrop {
-    border-image: url("borders/generic-border-unfocused-dark.svg") 3 3 4 3 / 3 3 4 3 stretch;
+    border-image: url("borders/generic-border-unfocused-dark.svg") 3 3 4 3 / 3px 3px 4px 3px stretch;
     border-radius: 3px;
     border-width: 1px 1px 2px 1px;
     border-style: solid;
@@ -223,7 +223,7 @@ GtkSwitch.trough:backdrop,
 }
 
 .trough row:backdrop {
-    border-image: url("borders/generic-border-unfocused-dark-alt.svg") 3 / 3 stretch;
+    border-image: url("borders/generic-border-unfocused-dark-alt.svg") 3 / 3px stretch;
     border-radius: 3px;
     border-width: 1px;
     border-style: solid;
@@ -241,7 +241,7 @@ GtkSwitch.trough:backdrop,
 .inline-toolbar.toolbar .button:backdrop:insensitive,
 .primary-toolbar GtkComboBox *:backdrop,
 .primary-toolbar GtkComboBox *:backdrop:insensitive { 
-    border-image: url("borders/primary-toolbar-generic-border-unfocused-dark.svg") 4 / 4 stretch;
+    border-image: url("borders/primary-toolbar-generic-border-unfocused-dark.svg") 4 / 4px stretch;
     border-radius: 3px;
     border-width: 2px;
     border-style: solid;
