--- a/themes/Adwaita/gtk-3.0/gtk-widgets.css
+++ b/themes/Adwaita/gtk-3.0/gtk-widgets.css
@@ -111,7 +111,7 @@ GtkWindow:backdrop {
     background-color: alpha(@theme_tooltip_bg_color, 0.90);
     color: @theme_tooltip_fg_color;
 
-    text-shadow: 1 1 black;
+    text-shadow: 1px 1px black;
 }
 
 .tooltip * {
@@ -134,7 +134,7 @@ GtkWindow:backdrop {
     border-radius: 3px;
     border-width: 1px;
     border-style: solid;
-    box-shadow: 1 1 inset white, -1 -1 inset white;
+    box-shadow: inset 1px 1px white, -1px -1px white;
 }
 
 .floating-bar.top {
@@ -264,9 +264,9 @@ GtkImage:insensitive {
 }
 
 .entry:focus {
-    box-shadow: 1 2 inset alpha(@theme_selected_bg_color, 0.1),
-                1 1 inset alpha(@theme_selected_bg_color, 0.1),
-                -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset 1px 2px alpha(@theme_selected_bg_color, 0.1),
+                inset 1px 1px alpha(@theme_selected_bg_color, 0.1),
+                inset -1px -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 .entry.progressbar {
@@ -326,11 +326,11 @@ GtkImage:insensitive {
     border-radius: 0;
     border-style: none;
     border-image: none;
-    box-shadow: 1 0 inset @inset_dark_color;
+    box-shadow: inset 1px 0 @inset_dark_color;
 }
 
 .spinbutton .button:backdrop {
-    box-shadow: 1 0 inset @unfocused_entry_separators;
+    box-shadow: inset 1px 0 @unfocused_entry_separators;
     box-shadow: none;
 }
 
@@ -366,17 +366,17 @@ GtkImage:insensitive {
 /* Add back the glowy effect from the entry covered by the pushed button background*/
 .spinbutton .button:active,
 .spinbutton .button:active:focus {
-    box-shadow: 1 0 inset @inset_dark_color, 0 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset 1px 0 @inset_dark_color, inset 0 1px alpha(@theme_selected_bg_color, 0.2), inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 .spinbutton .button:first-child:active,
 .spinbutton .button:first-child:active:focus {
-    box-shadow: 1 1 inset alpha(@theme_selected_bg_color, 0.2), 0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset 1px 1px alpha(@theme_selected_bg_color, 0.2), inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 .spinbutton .button:last-child:active,
 .spinbutton .button:last-child:active:focus {
-    box-shadow: 1 0 inset @inset_dark_color, 0 1 inset alpha(@theme_selected_bg_color, 0.2), -1 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset 1px 0 @inset_dark_color, inset 0 1px alpha(@theme_selected_bg_color, 0.2), inset -1px -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 /*****************
@@ -388,7 +388,7 @@ GtkColorSwatch:selected {
     border-style: solid;
     border-radius: 1px;
     border-color: alpha(black, 0.3);
-    box-shadow: 0 2 inset alpha(black, 0.07), 1 1 inset alpha(black, 0.07);
+    box-shadow: inset 0 2px alpha(black, 0.07), inset 1px 1px alpha(black, 0.07);
 
     background-color: transparent;
     background-clip: border-box;
@@ -532,7 +532,7 @@ GtkProgressBar {
     border-width: 1px;
     border-style: solid;
     border-color: @progressbar_border;
-    box-shadow: 1 1 alpha(white, 0.2) inset, -1 -1 alpha(white, 0.1) inset;
+    box-shadow: inset 1px 1px alpha(white, 0.2), inset -1px -1px alpha(white, 0.1);
 
     -adwaita-progressbar-pattern: -gtk-gradient (linear,
                                                  left top, right bottom,
@@ -662,11 +662,11 @@ GtkScale.mark {
 }
 
 GtkScale.trough.vertical {
-    box-shadow: -1 0 inset @theme_bg_color;
+    box-shadow: inset -1px 0 @theme_bg_color;
 }
 
 GtkScale.trough {
-    box-shadow: 0 -1 inset @theme_bg_color;
+    box-shadow: inset 0 -1px @theme_bg_color;
 }
 
 GtkScale.trough:backdrop {
@@ -730,7 +730,7 @@ GtkComboBox.combobox-entry .button {
     border-style: solid;
     border-color: transparent;
 
-    text-shadow: @button_text_shadow 0 1;
+    text-shadow: 0 1px @button_text_shadow;
 }
 
 /* We may want a background for focused buttons, but in the meantime let's remove it too */
@@ -754,14 +754,14 @@ GtkComboBox.combobox-entry .button {
     border-width: 2px;
     border-color: transparent;
 
-    text-shadow: @primary_toolbar_button_text_shadow 0 1;
+    text-shadow: 0 1px @primary_toolbar_button_text_shadow;
 }
 
 .primary-toolbar .button *:active,
 .inline-toolbar .button *:active,
 .button *:active {
     color: @button_active_text;
-    text-shadow: @button_active_text_shadow 0 1;
+    text-shadow: 0 1px @button_active_text_shadow;
 }
 
 .button *:insensitive,
@@ -784,15 +784,15 @@ GtkComboBox.combobox-entry .button {
 .toolbar .button.raised *,
 .toolbar .raised .button *,
 .inline-toolbar .button * {
-    icon-shadow: @button_text_shadow 0 1;
-    text-shadow: @button_text_shadow 0 1;
+    icon-shadow: 0 1px @button_text_shadow;
+    text-shadow: 0 1px @button_text_shadow;
 }
 
 .toolbar .button.raised *:active,
 .toolbar .raised .button *:active,
 .inline-toolbar .button *:active {
-    icon-shadow: @button_active_text_shadow 0 1;
-    text-shadow: @button_active_text_shadow 0 1;
+    icon-shadow: 0 1px @button_active_text_shadow;
+    text-shadow: 0 1px @button_active_text_shadow;
 }
 
 .toolbar .button.raised *:insensitive,
@@ -817,7 +817,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button,
 .inline-toolbar.toolbar .button,
 .inline-toolbar.toolbar GtkToolButton .button {
-    box-shadow: 1 0 inset @inset_light_color, -1 0 inset @inset_dark_color;
+    box-shadow: inset 1px 0 @inset_light_color, inset -1px 0 @inset_dark_color;
 }
 
 .linked .button:first-child,
@@ -825,7 +825,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button:first-child,
 .inline-toolbar.toolbar .button:first-child,
 .inline-toolbar.toolbar GtkToolButton:first-child .button {
-    box-shadow: -1 0 inset @inset_dark_color;
+    box-shadow: inset -1px 0 @inset_dark_color;
 }
 
 .linked .button:last-child,
@@ -833,7 +833,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button:last-child,
 .inline-toolbar.toolbar .button:last-child,
 .inline-toolbar.toolbar GtkToolButton:last-child .button {
-    box-shadow: 1 0 inset @inset_light_color;
+    box-shadow: inset 1px 0 @inset_light_color;
 }
 
 .linked .button:active,
@@ -841,7 +841,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button:active,
 .inline-toolbar.toolbar .button:active,
 .inline-toolbar.toolbar GtkToolButton .button:active {
-    box-shadow: 1 0 inset @inset_dark_color;
+    box-shadow: inset 1px 0 @inset_dark_color;
 }
 
 .linked .button:insensitive,
@@ -849,7 +849,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button:insensitive,
 .inline-toolbar.toolbar .button:insensitive,
 .inline-toolbar.toolbar GtkToolButton .button:insensitive {
-    box-shadow: -1 0 inset @inset_dark_color;
+    box-shadow: inset -1px 0 @inset_dark_color;
 }
 
 .linked .button:backdrop,
@@ -857,7 +857,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button:backdrop,
 .inline-toolbar.toolbar .button:backdrop,
 .inline-toolbar.toolbar GtkToolButton .button:backdrop {
-    box-shadow: -1 0 inset @unfocused_borders;
+    box-shadow: inset -1px 0 @unfocused_borders;
 }
 
 .linked .button:insensitive:backdrop,
@@ -865,7 +865,7 @@ GtkComboBox.combobox-entry .button {
 .toolbar .raised.linked .button:insensitive:backdrop,
 .inline-toolbar.toolbar .button:insensitive:backdrop,
 .inline-toolbar.toolbar GtkToolButton .button:insensitive:backdrop {
-    box-shadow: -1 0 inset @unfocused_insensitive_borders;
+    box-shadow: inset -1px 0 @unfocused_insensitive_borders;
 }
 
 .linked .button:insensitive:last-child:backdrop,
@@ -918,7 +918,7 @@ GtkComboBox.combobox-entry .button {
 .linked .button:insensitive {
     border-right-width: 0;
     border-left-width: 0;
-    border-image-width: 3 0 4 0;
+    border-image-width: 3px 0 4px 0;
     border-radius: 0;
 }
 
@@ -931,7 +931,7 @@ GtkComboBox.combobox-entry .button {
 .linked .button:focus:active:first-child,
 .linked .button:insensitive:first-child {
     border-right-width: 0;
-    border-image-width: 3 0 4 3;
+    border-image-width: 3px 0 4px 3;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
 }
@@ -945,7 +945,7 @@ GtkComboBox.combobox-entry .button {
 .linked .button:focus:active:last-child,
 .linked .button:insensitive:last-child {
     border-left-width: 0;
-    border-image-width: 3 3 4 0;
+    border-image-width: 3px 3px 4px 0;
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
 }
@@ -960,7 +960,7 @@ GtkComboBox.combobox-entry .button {
 .linked .button:insensitive:only-child {
     border-right-width: 1px;
     border-left-width: 1px;
-    border-image-width: 3 3 4 3;
+    border-image-width: 3px 3px 4px 3px;
     border-radius: 3px;
 }
 
@@ -995,7 +995,7 @@ GtkComboBox.combobox-entry .button {
 .inline-toolbar.toolbar GtkToolButton .button:backdrop:insensitive {
     border-right-width: 0;
     border-left-width: 0;
-    border-image-width: 4 0 4 0;
+    border-image-width: 4px 0 4px 0;
     border-radius: 0;
 }
 
@@ -1028,7 +1028,7 @@ GtkComboBox.combobox-entry .button {
 .inline-toolbar.toolbar GtkToolButton:first-child .button:backdrop:insensitive {
     border-left-width: 2px;
     border-right-width: 0;
-    border-image-width: 4 0 4 4;
+    border-image-width: 4px 0 4px 4px;
     border-bottom-right-radius: 0;
     border-top-right-radius: 0;
 }
@@ -1062,7 +1062,7 @@ GtkComboBox.combobox-entry .button {
 .inline-toolbar.toolbar GtkToolButton:last-child .button:backdrop:insensitive {
     border-left-width: 0;
     border-right-width: 2px;
-    border-image-width: 4 4 4 0;
+    border-image-width: 4px 4px 4px 0;
     border-bottom-left-radius: 0;
     border-top-left-radius: 0;
 }
@@ -1084,7 +1084,7 @@ GtkComboBox.combobox-entry .button {
 .inline-toolbar.toolbar GtkToolButton:only-child .button:backdrop:insensitive {
     border-right-width: 2px;
     border-left-width: 2px;
-    border-image-width: 4;
+    border-image-width: 4px;
     border-radius: 3px;
 }
 
@@ -1238,7 +1238,7 @@ GtkLinkButton.button *:active {
     border-width: 1px;
     padding: 0;
 
-    icon-shadow: 0 1 alpha(white, 0.5); /* FIXME*/
+    icon-shadow: 0 1px alpha(white, 0.5); /* FIXME*/
 }
 
 .notebook tab .button GtkImage:hover {
@@ -1249,9 +1249,9 @@ GtkLinkButton.button *:active {
 .notebook tab .button GtkImage:active,
 .notebook tab .button GtkImage:active:hover {
     background-color: alpha(black, 0.08); /* FIXME*/
-    box-shadow: 0 1 inset alpha(black, 0.05); /* FIXME*/
+    box-shadow: inset 0 1px alpha(black, 0.05); /* FIXME*/
     color:  @theme_base_color; /* FIXME*/
-    icon-shadow: 0 1 alpha(black, 0.25); /* FIXME*/
+    icon-shadow: 0 1px alpha(black, 0.25); /* FIXME*/
     border-color: alpha(black, 0.27) 
                   alpha(black, 0.13) 
                   alpha(black, 0.13) 
@@ -1276,7 +1276,7 @@ GtkComboBox {
     -GtkComboBox-arrow-scaling: 0.5;
     -GtkComboBox-shadow-type: none;
 
-    text-shadow: @button_text_shadow 0 1;
+    text-shadow: 0 1px @button_text_shadow;
 }
 
 GtkComboBox *:backdrop {
@@ -1301,68 +1301,68 @@ GtkComboBox .separator {
 
 GtkComboBox.combobox-entry .entry:first-child,
 GtkComboBox.combobox-entry .button:first-child {
-    border-image-width: 3 0 4 3;
+    border-image-width: 3px 0 4px 3px;
     border-radius: 3px 0 0 3px;
     border-right-width: 0;
 }
 
 GtkComboBox.combobox-entry .entry:last-child,
 GtkComboBox.combobox-entry .button:last-child {
-    border-image-width: 3 3 4 0;
+    border-image-width: 3px 3px 4px 0;
     border-radius: 0 3px 3px 0;
     border-left-width: 0;
 }
 
 .primary-toolbar GtkComboBox.combobox-entry .entry:first-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:first-child {
-    border-image-width: 4 0 4 4;
+    border-image-width: 4px 0 4px 4px;
     border-radius: 3px 0 0 3px;
     border-right-width: 0;
 }
 
 .primary-toolbar GtkComboBox.combobox-entry .entry:last-child,
 .primary-toolbar GtkComboBox.combobox-entry .button:last-child {
-    border-image-width: 4 4 4 0;
+    border-image-width: 4px 4px 4px 0;
     border-radius: 0 3px 3px 0;
     border-left-width: 0;
 }
 
 GtkComboBox.combobox-entry .entry:focus:first-child {
-    box-shadow: 1 2 inset alpha(@theme_selected_bg_color, 0.1),
-                1 1 inset alpha(@theme_selected_bg_color, 0.1),
-                0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset 1px 2px alpha(@theme_selected_bg_color, 0.1),
+                inset 1px 1px alpha(@theme_selected_bg_color, 0.1),
+                inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 GtkComboBox.combobox-entry .entry:focus:last-child {
-    box-shadow: -1 2 inset alpha(@theme_selected_bg_color, 0.1),
-                -1 1 inset alpha(@theme_selected_bg_color, 0.1),
-                0 -1 inset alpha(@theme_selected_bg_color, 0.2);
+    box-shadow: inset -1px 2px alpha(@theme_selected_bg_color, 0.1),
+                inset -1px 1px alpha(@theme_selected_bg_color, 0.1),
+                inset 0 -1px alpha(@theme_selected_bg_color, 0.2);
 }
 
 GtkComboBox.combobox-entry .button:last-child,
 GtkComboBox.combobox-entry .button:hover:last-child,
 GtkComboBox.combobox-entry .button:active:last-child,
 GtkComboBox.combobox-entry .button:hover:active:last-child {
-    box-shadow: 1 0 inset @inset_dark_color, 
-                0 1 inset @entry_inset,
-                0 2 inset alpha(@entry_inset, 0.4);
+    box-shadow: inset 1px 0 @inset_dark_color, 
+                inset 0 1px @entry_inset,
+                inset 0 2px alpha(@entry_inset, 0.4);
 }
 
 GtkComboBox.combobox-entry .button:first-child,
 GtkComboBox.combobox-entry .button:hover:first-child,
 GtkComboBox.combobox-entry .button:active:first-child,
 GtkComboBox.combobox-entry .button:hover:active:first-child {
-    box-shadow: -1 0 inset @inset_dark_color, 
-                0 1 inset @entry_inset,
-                0 2 inset alpha(@entry_inset, 0.4);
+    box-shadow: inset -1px 0 @inset_dark_color, 
+                inset 0 1px @entry_inset,
+                inset 0 2px alpha(@entry_inset, 0.4);
 }
 
 GtkComboBox.combobox-entry .button:insensitive:first-child {
-    box-shadow: -1 0 inset @inset_dark_color;
+    box-shadow: inset -1px 0 @inset_dark_color;
 }
 
 GtkComboBox.combobox-entry .button:insensitive:last-child {
-    box-shadow: 1 0 inset @inset_dark_color;
+    box-shadow: inset 1px 0 @inset_dark_color;
 }
 
 GtkComboBox.combobox-entry .button:backdrop:first-child,
@@ -1428,19 +1428,19 @@ GtkComboBox .button *:hover {
 }
 
 .scrollbar.button.top:hover {
-    box-shadow: 0 -1 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
+    box-shadow: inset 0 -1px mix(@scrollbar_slider, @scrollbar_trough, 0.8);
 }
 
 .scrollbar.button.bottom:hover {
-    box-shadow: 0 1 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
+    box-shadow: inset 0 1px mix(@scrollbar_slider, @scrollbar_trough, 0.8);
 }
 
 .scrollbar.button.right:hover {
-    box-shadow: 1 0 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
+    box-shadow: inset 1px 0 mix(@scrollbar_slider, @scrollbar_trough, 0.8);
 }
 
 .scrollbar.button.left:hover {
-    box-shadow: -1 0 inset mix(@scrollbar_slider, @scrollbar_trough, 0.8);
+    box-shadow: inset -1px 0 mix(@scrollbar_slider, @scrollbar_trough, 0.8);
 }
 
 .scrollbar.button.top:hover:backdrop,
@@ -1822,8 +1822,8 @@ GtkCheckButton:selected:focus {
 
     -GtkWidget-window-dragging: true;
     -GtkToolbar-button-relief: normal;
-    box-shadow: 0 3 inset alpha(black, 0.02), 0 2 inset alpha(black, 0.02), 0 1 inset alpha(black, 0.02);
-    text-shadow: @primary_toolbar_button_text_shadow 0 1;
+    box-shadow: inset 0 3px alpha(black, 0.02), inset 0 2px alpha(black, 0.02), inset 0 1px alpha(black, 0.02);
+    text-shadow: 0 1px @primary_toolbar_button_text_shadow;
 }
 
 .primary-toolbar .toolbar:insensitive,
@@ -1991,7 +1991,7 @@ GtkSwitch.slider {
     border-color: mix (@borders, @theme_text_color, 0.4);
 
     /*box-shadow: 0 -1 inset alpha(@theme_base_color, 0.50);*/
-    box-shadow: 0 -1 inset alpha(white, 0.9), 0 1 inset @theme_base_color, 0 2 inset alpha(@borders, 0.15);
+    box-shadow: inset 0 -1px alpha(white, 0.9), inset 0 1px @theme_base_color, inset 0 2px alpha(@borders, 0.15);
 
     padding: 2px 2px 3px 2px;
 
@@ -2356,19 +2356,19 @@ GtkInfoBar .button:active:backdrop,
 
 
 .info {
-    text-shadow: 0 1 @info_text_shadow;
+    text-shadow: 0 1px @info_text_shadow;
 }
 
 .warning {
-    text-shadow: 0 1 @warning_text_shadow;
+    text-shadow: 0 1px @warning_text_shadow;
 }
 
 .question {
-    text-shadow: 0 1 @question_text_shadow;
+    text-shadow: 0 1px @question_text_shadow;
 }
 
 .error {
-    text-shadow: 0 1 @error_text_shadow;
+    text-shadow: 0 1px @error_text_shadow;
 }
 
 GtkInfoBar:backdrop,
@@ -2465,7 +2465,7 @@ PanelApplet > GtkMenuBar.menubar .menuitem *:hover {
 .gnome-panel-menu-bar .menuitem *:hover,
 PanelApplet > GtkMenuBar.menubar .menuitem *:hover {
     color: @os_chrome_selected_fg_color;
-    text-shadow: @os_chrome_bg_color 0 1;
+    text-shadow: 0 1px @os_chrome_bg_color;
 }
 
 PanelApplet .button,
@@ -2498,7 +2498,7 @@ PanelApplet *:hover {
 PanelApplet *:active,
 PanelApplet *:hover:active {
     color: @os_chrome_selected_fg_color;
-    text-shadow: @os_chrome_bg_color 0 1;
+    text-shadow: 0 1px @os_chrome_bg_color;
 }
 
 NaTrayApplet {
