--- a/themes/Adwaita/gtk-3.0/gtk-main-dark.css
+++ b/themes/Adwaita/gtk-3.0/gtk-main-dark.css
@@ -196,6 +196,7 @@
 @define-color wm_button_bg_active_b shade (@theme_bg_color, 0.7);
 @define-color wm_button_bg_active_c shade (@theme_bg_color, 0.7);
 
+@import url("gtk-main-common.css");
 @import url("gtk-widgets-backgrounds.css");
 @import url("gtk-widgets-borders-dark.css");
 @import url("gtk-widgets-assets-dark.css");
